Added photo of Tucker and centered, changed overall font siz, style and color

--- a/tucker-blog.html
+++ b/tucker-blog.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link href="styles.css" rel="stylesheet" type="text/css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tuckers Blog</title>
 </head>
+
 <body>
   <h1>Tucker Roo</h1>
+  <div class="center_element">
+  <img src="img/forest-dog.jpg" width="300px">
+</div>
+
+  <h2>Hi! I'm Tucker and I just turned 9 years young. My hobbies include sleeping, jumping on mom,
+    foraging for scraps in the kitchen, chasing squirrels...Ooo those pesky squirrels! Salmon jerky
+    is my favorite, but I'll settle for beef jerky when I have to. I have a lot of thoughts. All day
+    long I'm just thinking away and my brother, Steve, told me about blogging. I said, "Blogging?? What a great idea!"
+    Steve always has the best ideas. Anyway, he says I talk to him too much so i'll share with you here instead!
+  </h2>
 </body>
+
 </html>
