Added column and column2

--- a/tucker-blog.html
+++ b/tucker-blog.html
@@ -12,8 +12,8 @@
 <body>
   <h1>Tucker Roo</h1>
   <div class="center_element">
-  <img src="img/forest-dog.jpg" width="300px">
-</div>
+    <img src="img/forest-dog.jpg" width="300px">
+  </div>
 
   <h2>Hi! I'm Tucker and I just turned 9 years young. My hobbies include sleeping, jumping on mom,
     foraging for scraps in the kitchen, chasing squirrels...Ooo those pesky squirrels! Salmon jerky
@@ -21,6 +21,25 @@
     long I'm just thinking away and my brother, Steve, told me about blogging. I said, "Blogging?? What a great idea!"
     Steve always has the best ideas. Anyway, he says I talk to him too much so i'll share with you here instead!
   </h2>
+
+  <div class="column">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ut
+      enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    </p>
+  </div>
+
+  <div class="column2">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+      magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Ut
+      enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    </p>
+  </div>
+
 </body>
 
 </html>
