Added box around about me, changed background color of box

--- a/tucker-blog.html
+++ b/tucker-blog.html
@@ -15,12 +15,14 @@
     <img src="img/forest-dog.jpg" width="300px">
   </div>
 
+  <div class="about_me">
   <h2>Hi! I'm Tucker and I just turned 9 years young. My hobbies include sleeping, jumping on mom,
     foraging for scraps in the kitchen, chasing squirrels...Ooo those pesky squirrels! Salmon jerky
     is my favorite, but I'll settle for beef jerky when I have to. I have a lot of thoughts. All day
     long I'm just thinking away and my brother, Steve, told me about blogging. I said, "Blogging?? What a great idea!"
     Steve always has the best ideas. Anyway, he says I talk to him too much so i'll share with you here instead!
   </h2>
+  </div>
 
   <div class="column">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
